--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="app_bar_menu_screenshots">Screenshots</string>
     <string name="app_bar_menu_settings">Settings</string>
     <string name="app_bar_menu_help">Help</string>
+
+    <string name="action_return_to_main_menu">Back</string>
+    <string name="action_view_screenshots">Screenshots</string>
 </resources>
