--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,11 @@
     <string name="app_bar_menu_settings">Settings</string>
     <string name="app_bar_menu_help">Help</string>
 
+    <string name="drawable_linst_field_description">Linst [dB]</string>
+    <string name="drawable_leq_field_description">Leq [dB]</string>
+    <string name="drawable_lmin_field_description">Lmin [dB]</string>
+    <string name="drawable_lmax_field_description">Lmax [dB]</string>
+
     <string name="action_return_to_main_menu">Back</string>
     <string name="action_take_screenshot">Take screenshot</string>
 </resources>
