--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,19 @@
     <string name="drawable_lmax_field_description">Lmax [dB]</string>
     <string name="textview_linst_field_placeholder_value">0.0</string>
 
+    <!-- SPL Meter Activity Layout Items -->
+    <string name="drawable_octave_band_125Hz_description">125 Hz bar drawable</string>
+    <string name="drawable_octave_band_250Hz_description">250 Hz bar drawable</string>
+    <string name="drawable_octave_band_500Hz_description">500 Hz bar drawable</string>
+    <string name="drawable_octave_band_1000Hz_description">1000 Hz bar drawable</string>
+    <string name="drawable_octave_band_2000Hz_description">2000 Hz bar drawable</string>
+    <string name="drawable_octave_band_4000Hz_description">4000 Hz bar drawable</string>
+    <string name="drawable_octave_band_8000Hz_description">8000 Hz bar drawable</string>
+    <string name="drawable_octave_band_16000Hz_description">16000 Hz bar drawable</string>
+
+    <string name="textview_calibration_constant_placeholder_value">0</string>
+    <string name="textview_calibration_parameter">Linst [dB] per octave band</string>
+
     <!-- Measurement Menu Items -->
     <string name="action_return_to_main_menu">Back</string>
     <string name="action_take_screenshot">Take screenshot</string>
